2022-04-20  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50080: Src/hist.c: add missing STOUC() in casemodify()

2022-04-19  Bart Schaefer  <schaefer@zsh.org>

	* unposted (cf. users/27656 (Tomasz Pala), users/27660):
	Completion/Unix/Type/_path_files: fix $SUFFIX when GLOB_COMPLETE

2022-04-14  Bart Schaefer  <schaefer@zsh.org>

	* 50069: Test/C03traps.ztst: fix test description

	* 50068: Etc/BUGS, Src/builtin.c, Test/C03traps.ztst: 'exit' in
	trap causes calling function to return (fixes workers/44007)

2022-04-14  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50052: Test/V14system.ztst: do nothing when skipping the test

	* 50046: Test/ztst.zsh: export LANG to child zsh

2022-04-12  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50013: Test/P01privileged.ztst, Test/ztst.zsh: skip %test if
	a chunk in %prep returns nonzero

	* 49996 (Peter) + 50012: Test/README, Test/ztst.zsh: add
	ZTST_continue to continue tests after a failure

	* 50017: Completion/Unix/Type/_time_zone: allow lowercase to
	match with uppercase

2022-04-11  Bart Schaefer  <schaefer@zsh.org>

	* 50043: Test/D02glob.ztst, Test/E03posix.ztst: for root user,
	skip glob tests	that rely on limited privilege and fix EUID test

2022-04-11  Mikael Magnusson  <mikachu@gmail.com>

	* 50042: Src/Zle/compcore.c: Another fix for 49915

2022-04-10  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: NEWS: Improve flow between the paragraph and
	its links.

2022-04-09  dana  <dana@dana.is>

	* unposted: Config/version.mk, Etc/FAQ.yo: Update for
	5.8.1.2-test (5.9)

	* 49958: NEWS: Dedicate zsh 5.9 to Sven Guckes

	* 49958, (tweaked per 50019): NEWS, README: Add missing
	changes, update for zsh 5.9

2022-04-06  Matthew Martin  <phy1729@gmail.com>

	* 49960: Doc/Zsh/compsys.yo: Sort lists in zshcompsys.

2022-04-05  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 49994: Src/glob.c: Single-byte equivalence of users/22601 and
	workers/40891 for matching against zero-length strings
